saving changes before testing new y_pred

--- a/notebooks/data_preprocessing_D.ipynb
+++ b/notebooks/data_preprocessing_D.ipynb
@@ -1624,7 +1624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -1683,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1694,7 +1694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1711,7 +1711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1726,7 +1726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1741,7 +1741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1773,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1787,7 +1787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1798,7 +1798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1809,7 +1809,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 273,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #Define Param Grid\n",
+    "# param_grid = {\n",
+    "#     'reg_alpha': [0, 0.5],  # L1\n",
+    "#     'reg_lambda': [0, 0.5],  # L2\n",
+    "#     'max_depth': [5, 10],  # Tree depth\n",
+    "#     'n_estimators': [100, 200]  # Boosting rounds\n",
+    "# }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1818,8 +1833,217 @@
     "    use_label_encoder=False,  # Disable the use of the label encoder - Need to test if this is required or not\n",
     "    eval_metric='logloss',  # logloss as the evaluation metric\n",
     "    random_state=42,  # For reproducibility\n",
-    "    reg_alpha=1.0 #L1\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #Grid Search\n",
+    "# grid_search = GridSearchCV(estimator=xgb_model, param_grid=param_grid, scoring='recall', cv=3, n_jobs=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:32:33] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:32:33] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:32:35] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:32:35] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:32:36] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:32:36] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:32:36] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:32:36] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:32:36] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:32:37] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:32:37] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:32:37] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:32:37] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:32:37] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:36:17] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:36:19] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:36:21] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:36:43] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:36:48] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:36:52] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:37:32] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:37:33] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:37:34] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:37:35] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:37:35] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:37:38] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:37:39] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:37:39] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:40:16] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:40:38] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:40:47] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:40:48] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:40:58] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:41:06] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:41:48] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:42:28] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:42:33] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:42:37] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:42:41] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:42:41] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:42:42] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:43:49] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "/Users/diego_mogollon/.pyenv/versions/3.10.6/envs/lateguru/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:45:32] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# #Fit Grid Search on balanced training data\n",
+    "# grid_search.fit(X_train_balanced, y_train_balanced)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #Print the best parameters and score\n",
+    "# print(f\"Best Parameters from Grid Search: {grid_search.best_params_}\")\n",
+    "# print(f\"Best F1 Score from Grid Search: {grid_search.best_score_}\")"
    ]
   },
   {
