--- a/Lateguru_Modelling_C_NN_RFB.ipynb
+++ b/Lateguru_Modelling_C_NN_RFB.ipynb
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "id": "kYTq6K7uE4Xw"
       },
@@ -97,9 +97,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ThFlnBQcMpfP",
-        "outputId": "d858097f-14bb-46fd-a55b-8c34e9eb5545"
+        "outputId": "0f03ff7d-d295-4103-9c89-2079c9df3896"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,9 +151,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IaDx4axvIpyV",
-        "outputId": "06743290-42db-4cea-e258-a52ed63d6422"
+        "outputId": "236ae42b-97df-4236-c904-f32d8ef00d4d"
       },
-      "execution_count": 26,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -331,7 +331,7 @@
       "metadata": {
         "id": "sT1qozeMuLd8"
       },
-      "execution_count": 27,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -345,7 +345,7 @@
       "metadata": {
         "id": "R2GfMg_FxThn"
       },
-      "execution_count": 28,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -359,7 +359,7 @@
       "metadata": {
         "id": "KIjvPa_qSZyu"
       },
-      "execution_count": 29,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -400,7 +400,7 @@
       "metadata": {
         "id": "Eo4DSspoYUeh"
       },
-      "execution_count": 31,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -1237,7 +1237,7 @@
       "metadata": {
         "id": "NwZ0OM-jjLuR"
       },
-      "execution_count": 32,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -1248,10 +1248,32 @@
         "\n"
       ],
       "metadata": {
-        "id": "deBivW5il5PR"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 118
+        },
+        "id": "deBivW5il5PR",
+        "outputId": "e9a89be8-ae14-4f67-c1c0-bc4fce774e44"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "BaggingClassifier(estimator=RandomForestClassifier(random_state=42),\n",
+              "                  random_state=42)"
+            ],
+            "text/html": [
+              "<style>#sk-container-id-1 {color: black;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>BaggingClassifier(estimator=RandomForestClassifier(random_state=42),\n",
+              "                  random_state=42)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">BaggingClassifier</label><div class=\"sk-toggleable__content\"><pre>BaggingClassifier(estimator=RandomForestClassifier(random_state=42),\n",
+              "                  random_state=42)</pre></div></div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">estimator: RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier(random_state=42)</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier(random_state=42)</pre></div></div></div></div></div></div></div></div></div></div>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1262,7 +1284,7 @@
       "metadata": {
         "id": "CjmU04A7l87y"
       },
-      "execution_count": 18,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -1271,10 +1293,25 @@
         "y_pred"
       ],
       "metadata": {
-        "id": "7467qZJ2u4mM"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7467qZJ2u4mM",
+        "outputId": "95428ebc-db0a-4f2c-eab5-178e8ab302f0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 0, 0, ..., 0, 0, 0])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1312,19 +1349,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TOJMKugrjNt-",
-        "outputId": "20aa01f5-de52-4bcb-ef8b-6a5a868e630c"
+        "outputId": "3874c663-c781-43dd-fbb7-3553319ea7b8"
       },
-      "execution_count": 19,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Recall: 0.43402963302207637\n",
-            "F1 score: 0.505264820729522\n",
-            "Roc-auc score: 0.6265033072831132\n",
-            "accuracy score: 0.6691251968529933\n",
-            "precision score: 0.6044742623609175\n"
+            "Recall: 0.4341653308907717\n",
+            "F1 score: 0.5055650473547508\n",
+            "Roc-auc score: 0.6267684727131201\n",
+            "accuracy score: 0.6694190319289778\n",
+            "precision score: 0.6050706223036464\n"
           ]
         }
       ]
@@ -1340,17 +1377,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "U1498m83oLfi",
-        "outputId": "ccff8118-8cf2-470c-c1be-2093664a9764"
+        "outputId": "4763d691-1eb3-42cf-bfe1-d1c27714d2eb"
       },
-      "execution_count": 20,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Confusion Matrix:\n",
-            "[[151496  33486]\n",
-            " [ 66733  51176]]\n"
+            "[[151569  33413]\n",
+            " [ 66717  51192]]\n"
           ]
         }
       ]
@@ -1367,9 +1404,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5Pbn5c4eoQap",
-        "outputId": "86f7c366-48a5-454a-bc6f-1ff60c88a47d"
+        "outputId": "e0d156c5-3e9c-4010-8312-aaf6a4fcb110"
       },
-      "execution_count": 21,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -1379,7 +1416,7 @@
             "              precision    recall  f1-score   support\n",
             "\n",
             "           0       0.69      0.82      0.75    184982\n",
-            "           1       0.60      0.43      0.51    117909\n",
+            "           1       0.61      0.43      0.51    117909\n",
             "\n",
             "    accuracy                           0.67    302891\n",
             "   macro avg       0.65      0.63      0.63    302891\n",
@@ -1397,7 +1434,7 @@
       "metadata": {
         "id": "c9w2qI1poTOk"
       },
-      "execution_count": 22,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -1409,7 +1446,7 @@
       "metadata": {
         "id": "t1yxWXxdpoJM"
       },
-      "execution_count": 23,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -1422,19 +1459,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "t7FUuBySv9K_",
-        "outputId": "961a5d65-561a-48af-8622-0e853519e8e5"
+        "outputId": "f29f808f-7b90-459e-8aee-c9b658e5a5a6"
       },
-      "execution_count": 24,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.4826799234510911"
+              "0.48296804384871656"
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 20
         }
       ]
     },
@@ -1460,9 +1497,9 @@
           "height": 472
         },
         "id": "yRxcuN23pE2y",
-        "outputId": "58269bad-1110-4a9a-c2bf-06179cf9e4dc"
+        "outputId": "746e6a98-1e88-4692-e7cf-a33d5f1aef4d"
       },
-      "execution_count": 25,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "display_data",
