first call to weather api, started coding fast.py

--- a/notebooks/modelling_D.ipynb
+++ b/notebooks/modelling_D.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -57,10 +57,14 @@
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Mounted at /content/drive\n"
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'google.colab'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgoogle\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcolab\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m drive\n\u001b[1;32m      2\u001b[0m drive\u001b[38;5;241m.\u001b[39mmount(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/content/drive\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'google.colab'"
           ]
         }
       ],
@@ -71,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "d18v7U7RJrpL"
       },
@@ -115,7 +119,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -135,35 +139,35 @@
             "3  2021-01-03 09:00:00    LAX  JFK  American Airlines Inc.      False   \n",
             "4  2021-01-04 09:00:00    LAX  JFK  American Airlines Inc.      False   \n",
             "\n",
-            "  CancellationReason  Delayed  DepDelayMinutes  CarrierDelay  \\\n",
-            "0      Not Cancelled    False              0.0           0.0   \n",
-            "1      Not Cancelled     True              2.0           0.0   \n",
-            "2      Not Cancelled     True             25.0          28.0   \n",
-            "3      Not Cancelled     True             25.0          28.0   \n",
-            "4      Not Cancelled    False              0.0           0.0   \n",
+            "  CancellationReason  Delayed  DepDelayMinutes  CarrierDelay  WeatherDelay  \\\n",
+            "0                NaN    False              0.0           NaN           NaN   \n",
+            "1                NaN     True              2.0           NaN           NaN   \n",
+            "2                NaN     True             28.0          28.0           0.0   \n",
+            "3                NaN     True             28.0          28.0           0.0   \n",
+            "4                NaN    False              0.0           NaN           NaN   \n",
             "\n",
-            "   Weather_Delay_Length  ...  Sea_Level_Pressure  Visibility  Wind_Speed  \\\n",
-            "0                   0.0  ...              1020.1    16093.40         0.0   \n",
-            "1                   0.0  ...              1025.5    16093.40         0.0   \n",
-            "2                   0.0  ...              1015.2     4828.02         4.6   \n",
-            "3                   0.0  ...              1024.1     6437.36         4.6   \n",
-            "4                   0.0  ...              1015.2     6437.36         4.6   \n",
+            "   ...  LateAircraftDelay  Temperature  Feels_Like_Temperature  \\\n",
+            "0  ...                NaN         56.0                    55.9   \n",
+            "1  ...                NaN         54.0                    54.0   \n",
+            "2  ...                0.0         52.0                    52.0   \n",
+            "3  ...                0.0         53.0                    53.1   \n",
+            "4  ...                NaN         51.0                    51.1   \n",
             "\n",
-            "   Wind_Gust  Precipitation  Ice_Accretion_3hr  Hour  Day_Of_Week  Month  \\\n",
-            "0      24.97            0.0                0.0     9            4      1   \n",
-            "1      24.97            0.0                0.0     9            5      1   \n",
-            "2      24.97            0.0                0.0     9            6      1   \n",
-            "3      24.97            0.0                0.0     9            6      1   \n",
-            "4      24.97            0.0                0.0     9            0      1   \n",
+            "   Altimeter_Pressure  Sea_Level_Pressure  Visibility  Wind_Speed  Wind_Gust  \\\n",
+            "0             1020.32              1020.1    16093.40         0.0      24.97   \n",
+            "1             1025.74              1025.5    16093.40         0.0      24.97   \n",
+            "2             1024.38              1015.2     4828.02         4.6      24.97   \n",
+            "3             1024.38              1024.1     6437.36         4.6      24.97   \n",
+            "4             1023.03              1015.2     6437.36         4.6      24.97   \n",
             "\n",
-            "   Weather_Delayed  \n",
-            "0                0  \n",
-            "1                0  \n",
-            "2                0  \n",
-            "3                0  \n",
-            "4                0  \n",
+            "   Precipitation  Ice_Accretion_3hr  \n",
+            "0            0.0                0.0  \n",
+            "1            0.0                0.0  \n",
+            "2            0.0                0.0  \n",
+            "3            0.0                0.0  \n",
+            "4            0.0                0.0  \n",
             "\n",
-            "[5 rows x 26 columns]\n"
+            "[5 rows x 22 columns]\n"
           ]
         }
       ],
@@ -171,41 +175,9 @@
         "# Load preprocessed data set from /data folder\n",
         "file_path = '/content/drive/My Drive/Colab Notebooks/lateguru/data/preprocessed_treated_outliers.csv'\n",
         "\n",
-        "preprocessed_df = pd.read_csv(file_path)\n",
+        "preprocessed_df = pd.read_csv(file_path, compression='zip')\n",
         "\n",
         "print(preprocessed_df.head())"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "VvZhEM4nJrpU",
-        "outputId": "061b4d3e-0fd5-4f38-ae37-3776232cbbfd"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "Index(['Time', 'Origin', 'Dest', 'Carrier', 'Cancelled', 'CancellationReason',\n",
-              "       'Delayed', 'DepDelayMinutes', 'CarrierDelay', 'Weather_Delay_Length',\n",
-              "       'NASDelay', 'SecurityDelay', 'LateAircraftDelay', 'Temperature',\n",
-              "       'Feels_Like_Temperature', 'Altimeter_Pressure', 'Sea_Level_Pressure',\n",
-              "       'Visibility', 'Wind_Speed', 'Wind_Gust', 'Precipitation',\n",
-              "       'Ice_Accretion_3hr', 'Hour', 'Day_Of_Week', 'Month', 'Weather_Delayed'],\n",
-              "      dtype='object')"
-            ]
-          },
-          "execution_count": 5,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "preprocessed_df.columns"
       ]
     },
     {
